feat: implement multi-project creation and prospect onboarding wizard

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ RESEND_API_KEY=changeme
 EMAIL_FROM=no-reply@app.orylis.fr
 BLOB_READ_WRITE_TOKEN=changeme
 BLOB_PUBLIC_URL=https://your-bucket-id.public.blob.vercel-storage.com
+
+# Observability (PostHog)
+NEXT_PUBLIC_POSTHOG_KEY=phc_...
+NEXT_PUBLIC_POSTHOG_HOST=https://app.posthog.com
