--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "pdf-lib": "^1.17.1",
     "pdfkit": "^0.17.2",
     "pg": "^8.12.0",
+    "posthog-js": "^1.298.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.51.5",
