--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
         },
         {
             "path": "/api/cron/check-abandoned",
-            "schedule": "*/10 * * * *"
+            "schedule": "0 10 * * *"
         }
     ]
 }
