--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.11.1",
+    "@google-analytics/data": "^5.2.1",
     "@hookform/resolvers": "^3.3.4",
     "@pdf-lib/fontkit": "^1.1.1",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -37,6 +38,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
     "drizzle-orm": "^0.44.7",
     "lucide-react": "^0.462.0",
     "next": "^16.0.7",
@@ -51,7 +53,9 @@
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.51.5",
     "react-signature-canvas": "1.1.0-alpha.2",
+    "recharts": "^3.6.0",
     "resend": "^2.1.0",
+    "server-only": "^0.0.1",
     "sonner": "^1.4.0",
     "stripe": "^20.0.0",
     "tailwind-merge": "^2.6.0",
