--- a/package.json
+++ b/package.json
@@ -13,19 +13,25 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.11.1",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@google-analytics/data": "^5.2.1",
     "@hookform/resolvers": "^3.3.4",
     "@pdf-lib/fontkit": "^1.1.1",
-    "@radix-ui/react-avatar": "^1.1.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-avatar": "^1.1.11",
     "@radix-ui/react-checkbox": "^1.3.3",
-    "@radix-ui/react-dialog": "^1.1.0",
-    "@radix-ui/react-dropdown-menu": "^2.1.1",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.1.1",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.8",
     "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.1.1",
-    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.2.8",
@@ -50,6 +56,7 @@
     "pg": "^8.12.0",
     "posthog-js": "^1.298.1",
     "react": "^19.2.1",
+    "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.1",
     "react-hook-form": "^7.51.5",
     "react-signature-canvas": "1.1.0-alpha.2",
@@ -75,6 +82,7 @@
     "eslint-config-next": "^15.0.0-canary.120",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.9",
+    "tsx": "^4.21.0",
     "typescript": "^5.6.3"
   },
   "packageManager": "pnpm@9.10.0"
